--- a/app/views/styleguide/07 Components/_components.html
+++ b/app/views/styleguide/07 Components/_components.html
@@ -1452,6 +1452,186 @@
     <h3>
       <a href="#7.20">7.20</a>
     </h3>
+    <div class="sg-description">
+      <h2>Tiles</h2>
+      <p>Description</p>
+    </div>
+    <div class="sg-canvases">
+      <div class="align-left bg-light sg-canvas">
+        <span class="sg-modifier-name"></span>
+        <div style="">
+
+
+
+          <div class="ui-tile ui-tile--set">
+            <div class="ui-tile__head">
+              <ul class="ui-tile__actions left by-left">
+                <li class="ui-tile__action">
+                  <a class="ui-tile__action-link" data-clipboard-toggle="" title="Zur Zwischenablage hinzufügen/entfernen">
+                    <i class="icon-checkbox"></i>
+                  </a>
+                </li>
+                <li class="ui-tile__action">
+                  <a class="ui-tile__action-link" data-favor-toggle="" title="Zu Favoriten hinzufügen">
+                    <i class="icon-star-empty"></i>
+                  </a>
+                </li>
+              </ul>
+              <ul class="ui-tile__actions right by-right">
+                <li class="ui-tile__action">
+                  <a class="ui-tile__action-link" title="Stöbern">
+                    <i class="icon-eye"></i>
+                  </a>
+                </li>
+                <li class="ui-tile__action">
+                  <a class="ui-tile__action-link" title="Metadaten editieren">
+                    <i class="icon-pen"></i>
+                  </a>
+                </li>
+                <li class="ui-tile__action">
+                  <a class="ui-tile__action-link" data-delete-action="" title="Löschen">
+                    <i class="icon-trash"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="ui-tile__body">
+              <a class="ui-tile__thumbnail" href="http://example.com">
+                <img alt="Media-entry-1" src="/assets/styleguide/media-entry-2.jpg" class="ui-tile__image">
+              </a>
+            </div>
+            <div class="ui-tile__foot">
+              <h3 class="ui-tile__title">Name that can easily go onto 2 lines</h3>
+              <h4 class="ui-tile__meta">Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well</h4>
+              <span class="ui-tile__flags">
+                <i class="icon-privacy-private ui-tile__flag ui-tile__flag--privacy" title="This entry is Private"></i>
+                <i class="icon-filter ui-tile__flag ui-tile__flag--type" title="This entry is a Set"></i>
+              </span>
+            </div>
+          </div>
+
+
+
+        </div>
+      </div>
+      <div class="align-left bg-light sg-canvas">
+        <span class="sg-modifier-name">.ui-tile--small</span>
+        <div style="">
+
+
+          <div class="ui-tile ui-tile--small ui-tile--set">
+            <div class="ui-tile__head">
+              <ul class="ui-tile__actions left by-left">
+                <li class="ui-tile__action">
+                  <a class="ui-tile__action-link" data-clipboard-toggle="" title="Zur Zwischenablage hinzufügen/entfernen">
+                    <i class="icon-checkbox"></i>
+                  </a>
+                </li>
+                <li class="ui-tile__action">
+                  <a class="ui-tile__action-link" data-favor-toggle="" title="Zu Favoriten hinzufügen">
+                    <i class="icon-star-empty"></i>
+                  </a>
+                </li>
+              </ul>
+              <ul class="ui-tile__actions right by-right">
+                <li class="ui-tile__action">
+                  <a class="ui-tile__action-link" title="Stöbern">
+                    <i class="icon-eye"></i>
+                  </a>
+                </li>
+                <li class="ui-tile__action">
+                  <a class="ui-tile__action-link" title="Metadaten editieren">
+                    <i class="icon-pen"></i>
+                  </a>
+                </li>
+                <li class="ui-tile__action">
+                  <a class="ui-tile__action-link" data-delete-action="" title="Löschen">
+                    <i class="icon-trash"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="ui-tile__body">
+              <a class="ui-tile__thumbnail" href="http://example.com">
+                <img alt="Document.png" class="ui-tile__image" src="/assets/thumbnails/document.png.png">
+              </a>
+            </div>
+            <div class="ui-tile__foot">
+              <h3 class="ui-tile__title">Name that can easily go onto 2 lines</h3>
+              <h4 class="ui-tile__meta">Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well</h4>
+              <span class="ui-tile__flags">
+                <i class="icon-privacy-private ui-tile__flag ui-tile__flag--privacy" title="This entry is Private"></i>
+                <i class="icon-filter ui-tile__flag ui-tile__flag--type" title="This entry is a Set"></i>
+              </span>
+            </div>
+          </div>
+
+
+        </div>
+      </div>
+
+      <div class="align-left bg-light sg-canvas">
+        <span class="sg-modifier-name">.ui-tile--large</span>
+        <div style="">
+
+
+          <div class="ui-tile ui-tile--large ui-tile--set">
+            <div class="ui-tile__head">
+              <ul class="ui-tile__actions left by-left">
+                <li class="ui-tile__action">
+                  <a class="ui-tile__action-link" data-clipboard-toggle="" title="Zur Zwischenablage hinzufügen/entfernen">
+                    <i class="icon-checkbox"></i>
+                  </a>
+                </li>
+                <li class="ui-tile__action">
+                  <a class="ui-tile__action-link" data-favor-toggle="" title="Zu Favoriten hinzufügen">
+                    <i class="icon-star-empty"></i>
+                  </a>
+                </li>
+              </ul>
+              <ul class="ui-tile__actions right by-right">
+                <li class="ui-tile__action">
+                  <a class="ui-tile__action-link" title="Stöbern">
+                    <i class="icon-eye"></i>
+                  </a>
+                </li>
+                <li class="ui-tile__action">
+                  <a class="ui-tile__action-link" title="Metadaten editieren">
+                    <i class="icon-pen"></i>
+                  </a>
+                </li>
+                <li class="ui-tile__action">
+                  <a class="ui-tile__action-link" data-delete-action="" title="Löschen">
+                    <i class="icon-trash"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="ui-tile__body">
+              <a class="ui-tile__thumbnail" href="http://example.com">
+                <img alt="Media-entry-1" src="/assets/styleguide/media-entry-2.jpg" class="ui-tile__image">
+              </a>
+            </div>
+            <div class="ui-tile__foot">
+              <h3 class="ui-tile__title">Name that can easily go onto 2 lines</h3>
+              <h4 class="ui-tile__meta">Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well</h4>
+              <span class="ui-tile__flags">
+                <i class="icon-privacy-private ui-tile__flag ui-tile__flag--privacy" title="This entry is Private"></i>
+                <i class="icon-filter ui-tile__flag ui-tile__flag--type" title="This entry is a Set"></i>
+              </span>
+            </div>
+          </div>
+
+
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="sg-example" id="7.21">
+    <h3>
+      <a href="#7.21">7.21</a>
+    </h3>
 
     <div class="sg-description">
       <span class="sg-filename">_ui-tooltip.scss</span>
@@ -1464,9 +1644,9 @@
     </div>
   </section>
 
-  <section class="sg-example" id="7.21">
+  <section class="sg-example" id="7.22">
     <h3>
-      <a href="#7.21">7.21</a>
+      <a href="#7.22">7.22</a>
     </h3>
 
     <div class="sg-description">
@@ -1497,9 +1677,9 @@
     </div>
   </section>
 
-  <section class="sg-example" id="7.22">
+  <section class="sg-example" id="7.23">
     <h3>
-      <a href="#7.22">7.22</a>
+      <a href="#7.23">7.23</a>
     </h3>
 
     <div class="sg-description">
@@ -1582,9 +1762,9 @@
     </div>
   </section>
 
-  <section class="sg-example" id="7.23">
+  <section class="sg-example" id="7.24">
     <h3>
-      <a href="#7.23">7.23</a>
+      <a href="#7.24">7.24</a>
     </h3>
 
     <div class="sg-description">
