--- a/app/assets/stylesheets/components/_ui-tiles.sass
+++ b/app/assets/stylesheets/components/_ui-tiles.sass
@@ -16,6 +16,7 @@
     content: ""
     display: block
     z-index: 30
+    pointer-events: none
 
 /**
  *  Sum or parts
@@ -27,6 +28,7 @@
 
 .ui-tile__body
   line-height: 0
+  background-color: rgba(0, 0, 0, 0.3)
 
 .ui-tile__head
   +position-top-left(0,0)
