ui: set: featured: fix typo
now Sets look like Sets

--- a/app/views/media_sets/highlights/_highlight.html.haml
+++ b/app/views/media_sets/highlights/_highlight.html.haml
@@ -1,4 +1,4 @@
-%a{:class => "ui-tile#{highlight.type.match('set') ? " ui-tile--set" : ""}",
+%a{:class => "ui-tile#{highlight.type.match('Set') ? " ui-tile--set" : ""}",
    :href => media_resource_path(highlight)}
 
   .ui-tile__body
