provide missing autocomplete css in admin

--- a/app/assets/stylesheets/app_admin.css.sass
+++ b/app/assets/stylesheets/app_admin.css.sass
@@ -1,3 +1,5 @@
+//= require jquery-ui/autocomplete
+
 @import 'bootstrap'
 @import 'colors'
 @import '../fonts/madek-icon-font/style'
@@ -8,8 +10,6 @@
 @import 'app_admin/meta_keys'
 @import 'app_admin/context_groups'
 @import 'app_admin/copyrights'
-
-@import 'components/ui-autocomplete'
 
 @mixin limit($max-width)
   display: block
