--- a/app/views/app_admin/groups/_group.html.haml
+++ b/app/views/app_admin/groups/_group.html.haml
@@ -2,7 +2,7 @@
   %td
     %span.limit250{title: group.name} #{group.name}
   %td
-    %span.limit250{title: group.ldap_name} #{group.ldap_name}
+    %span.limit250{title: group.institutional_group_name} #{group.institutional_group_name}
   %td
     %span #{group.type}
 
