ui: my: show 'vocabulary' section more consistently
Now the section is only shown and in the sidebar if there are any accessible resources in any context,
just like the listing itself does it.
Also fixes a double-nesting in the markup.

Squashed commit of the following:

commit 46228144daa34d3be076fe1eb39a49fabfa856f5
Author: Max F. Albrecht <1@178.is>
Date:   Wed Oct 8 12:52:45 2014 +0200

    fix container nesting

commit 356f0797584a9d358d339bb9aef0b62c98dfb3f7
Author: Max F. Albrecht <1@178.is>
Date:   Wed Oct 8 12:45:02 2014 +0200

    consistently filter context for all of /my

    only show accessible resources!

--- a/app/views/contexts/_wrapper.html.haml
+++ b/app/views/contexts/_wrapper.html.haml
@@ -1,9 +1,3 @@
-:ruby
-  # filter contexts that the current user has any resources for
-  user_contexts= contexts.map { |context|
-    context unless MediaResource.filter(current_user, {:context_ids => [context.id]}).empty?
-  }.reject(&:nil?)
-
 .ui-resources-holder.pal
   - if defined? title
     .ui-resources-header
@@ -14,7 +8,7 @@
             = _("Show all")
 
   .ui-contexts
-    - user_contexts.in_groups_of(3, false).each_with_index do |contextrow, index|
+    - contexts.in_groups_of(3, false).each_with_index do |contextrow, index|
       .row
         - contextrow.each do |context|
           .col1of3
