--- a/app/views/my/contexts.html.haml
+++ b/app/views/my/contexts.html.haml
@@ -18,7 +18,7 @@
         .app-body-content.table-cell.table-substance.ui-container
           
           = render :partial => "contexts/wrapper", 
-                     :locals => {:contexts => @contexts, 
+                     :locals => {:contexts => @user_contexts, 
                                  :title => _("Vokabulare")}
 
   .app-footer-push
