Improve export dialog

--- a/app/assets/stylesheets/_loader.sass
+++ b/app/assets/stylesheets/_loader.sass
@@ -156,6 +156,7 @@
 @import views/edit_multiple_media_entries
 @import views/home
 @import views/relationships
+@import views/export
 
 /* Extra
  *-----------------------------------------
