--- a/app/views/media_entries/_export.html.haml
+++ b/app/views/media_entries/_export.html.haml
@@ -8,7 +8,7 @@
       exportieren
   .ui-modal-body.ui-export-container
 
-    - if @x_large_file_available
+    - if @x_large_file_available || (@original_file_available && @can_download)
 
       - unless @original_file.content_type.match(/^video.*/)
 
