Export: correct type indications for smaller file versions
Squashed commit of the following:

commit f9b370ef8e78c97ec3a5025b30dd1ca8928dd607
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Thu Oct 9 11:37:18 2014 +0200

--- a/app/views/media_entries/export/_with_latest_meta_data.html.haml
+++ b/app/views/media_entries/export/_with_latest_meta_data.html.haml
@@ -25,4 +25,4 @@
             %a{:href => "/download?id=#{@media_entry.id}&update=1&size=x_large"}
               = number_to_human_size(@x_large_file.size)
               = "(#{dimensions_for(@x_large_file)})" if dimensions_for(@x_large_file)
-              %strong= @format_original_file
+              %strong= file_format_for(@x_large_file)
