--- a/app/views/media_entries/export/_original_meta_data.html.haml
+++ b/app/views/media_entries/export/_original_meta_data.html.haml
@@ -20,9 +20,9 @@
               = "(#{dimensions_for(@original_file)})" if dimensions_for(@original_file)
               %strong= @format_original_file
 
-        - if @x_large_file
+        - if @x_large_file_available
           %li.ui-drop-item.by-right
             %a{:href => "/download?id=#{@media_entry.id}&size=#{@preview_size}"}
               = number_to_human_size(@x_large_file.size)
               = "(#{dimensions_for(@x_large_file)})" if dimensions_for(@x_large_file)
-              %strong= @format_original_file
+              %strong= file_format_for(@x_large_file)
