Add randomization to teaser sets

--- a/app/views/filter_sets/_section.html.haml
+++ b/app/views/filter_sets/_section.html.haml
@@ -1,4 +1,4 @@
-%li.ui-resource
+%li.ui-resource{id: section[:name]}
   .ui-thumbnail.media-catalog
     %a.ui-thumbnail-image-wrapper{:href => explore_section_path(category_set, section[:name])}
       .ui-thumbnail-image-holder
