--- a/app/views/layouts/app_admin.html.haml
+++ b/app/views/layouts/app_admin.html.haml
@@ -76,6 +76,10 @@
                 = link_to app_admin_media_sets_path do
                   %i.icon-set
                   Media Sets
+              %li
+                = link_to app_admin_filter_sets_path do
+                  %i.icon-filter
+                  Filter Sets
 
           %li.dropdown
             %a.dropdown-toggle{href: "#", data: {toggle: 'dropdown'}}
