Link from admin/filter_sets/ to /filter_sets/....

--- a/app/views/app_admin/filter_sets/_filter_set.html.haml
+++ b/app/views/app_admin/filter_sets/_filter_set.html.haml
@@ -1,5 +1,7 @@
 %tr
-  %td= filter_set.id
+  %td
+    = link_to filter_set_path(filter_set) do 
+      #{filter_set.id}
   %td
     = link_to app_admin_user_path(filter_set.user) do
       = filter_set.user.to_s
