--- a/app/views/app_admin/filter_sets/index.html.haml
+++ b/app/views/app_admin/filter_sets/index.html.haml
@@ -5,7 +5,7 @@
 %table.table.table-striped
   %thead
     %tr
-      %th Id
+      %th ID / link to UI 
       %th Owner
       %th Title
       %th.no-wrap # User-permissions
